; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/common/tuners/extr_tda18271-fe.c_tda18271_tune.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/common/tuners/extr_tda18271-fe.c_tda18271_tune.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.tda18271_priv* }
%struct.tda18271_priv = type { i32, i32 }
%struct.tda18271_std_map_item = type { i32, i32, i32 }

@.str = private unnamed_addr constant [55 x i8] c"freq = %d, ifc = %d, bw = %d, agc_mode = %d, std = %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"failed to configure agc\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*, %struct.tda18271_std_map_item*, i32, i32)* @tda18271_tune to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tda18271_tune(%struct.dvb_frontend* %0, %struct.tda18271_std_map_item* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.dvb_frontend*, align 8
  %6 = alloca %struct.tda18271_std_map_item*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.tda18271_priv*, align 8
  %10 = alloca i32, align 4
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %5, align 8
  store %struct.tda18271_std_map_item* %1, %struct.tda18271_std_map_item** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load %struct.dvb_frontend*, %struct.dvb_frontend** %5, align 8
  %12 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %11, i32 0, i32 0
  %13 = load %struct.tda18271_priv*, %struct.tda18271_priv** %12, align 8
  store %struct.tda18271_priv* %13, %struct.tda18271_priv** %9, align 8
  %14 = load i32, i32* %7, align 4
  %15 = load %struct.tda18271_std_map_item*, %struct.tda18271_std_map_item** %6, align 8
  %16 = getelementptr inbounds %struct.tda18271_std_map_item, %struct.tda18271_std_map_item* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* %8, align 4
  %19 = load %struct.tda18271_std_map_item*, %struct.tda18271_std_map_item** %6, align 8
  %20 = getelementptr inbounds %struct.tda18271_std_map_item, %struct.tda18271_std_map_item* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.tda18271_std_map_item*, %struct.tda18271_std_map_item** %6, align 8
  %23 = getelementptr inbounds %struct.tda18271_std_map_item, %struct.tda18271_std_map_item* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @tda_dbg(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str, i64 0, i64 0), i32 %14, i32 %17, i32 %18, i32 %21, i32 %24)
  %26 = load %struct.dvb_frontend*, %struct.dvb_frontend** %5, align 8
  %27 = call i32 @tda18271_agc(%struct.dvb_frontend* %26)
  store i32 %27, i32* %10, align 4
  %28 = load i32, i32* %10, align 4
  %29 = call i64 @tda_fail(i32 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %4
  %32 = call i32 @tda_warn(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  br label %33

33:                                               ; preds = %31, %4
  %34 = load %struct.dvb_frontend*, %struct.dvb_frontend** %5, align 8
  %35 = call i32 @tda18271_init(%struct.dvb_frontend* %34)
  store i32 %35, i32* %10, align 4
  %36 = load i32, i32* %10, align 4
  %37 = call i64 @tda_fail(i32 %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %40

39:                                               ; preds = %33
  br label %65

40:                                               ; preds = %33
  %41 = load %struct.tda18271_priv*, %struct.tda18271_priv** %9, align 8
  %42 = getelementptr inbounds %struct.tda18271_priv, %struct.tda18271_priv* %41, i32 0, i32 1
  %43 = call i32 @mutex_lock(i32* %42)
  %44 = load %struct.tda18271_priv*, %struct.tda18271_priv** %9, align 8
  %45 = getelementptr inbounds %struct.tda18271_priv, %struct.tda18271_priv* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 4
  switch i32 %46, label %56 [
    i32 129, label %47
    i32 128, label %52
  ]

47:                                               ; preds = %40
  %48 = load %struct.dvb_frontend*, %struct.dvb_frontend** %5, align 8
  %49 = load i32, i32* %7, align 4
  %50 = load i32, i32* %8, align 4
  %51 = call i32 @tda18271c1_rf_tracking_filter_calibration(%struct.dvb_frontend* %48, i32 %49, i32 %50)
  br label %56

52:                                               ; preds = %40
  %53 = load %struct.dvb_frontend*, %struct.dvb_frontend** %5, align 8
  %54 = load i32, i32* %7, align 4
  %55 = call i32 @tda18271c2_rf_tracking_filters_correction(%struct.dvb_frontend* %53, i32 %54)
  br label %56

56:                                               ; preds = %40, %52, %47
  %57 = load %struct.dvb_frontend*, %struct.dvb_frontend** %5, align 8
  %58 = load %struct.tda18271_std_map_item*, %struct.tda18271_std_map_item** %6, align 8
  %59 = load i32, i32* %7, align 4
  %60 = load i32, i32* %8, align 4
  %61 = call i32 @tda18271_channel_configuration(%struct.dvb_frontend* %57, %struct.tda18271_std_map_item* %58, i32 %59, i32 %60)
  store i32 %61, i32* %10, align 4
  %62 = load %struct.tda18271_priv*, %struct.tda18271_priv** %9, align 8
  %63 = getelementptr inbounds %struct.tda18271_priv, %struct.tda18271_priv* %62, i32 0, i32 1
  %64 = call i32 @mutex_unlock(i32* %63)
  br label %65

65:                                               ; preds = %56, %39
  %66 = load i32, i32* %10, align 4
  ret i32 %66
}

declare dso_local i32 @tda_dbg(i8*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @tda18271_agc(%struct.dvb_frontend*) #1

declare dso_local i64 @tda_fail(i32) #1

declare dso_local i32 @tda_warn(i8*) #1

declare dso_local i32 @tda18271_init(%struct.dvb_frontend*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @tda18271c1_rf_tracking_filter_calibration(%struct.dvb_frontend*, i32, i32) #1

declare dso_local i32 @tda18271c2_rf_tracking_filters_correction(%struct.dvb_frontend*, i32) #1

declare dso_local i32 @tda18271_channel_configuration(%struct.dvb_frontend*, %struct.tda18271_std_map_item*, i32, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
